RESOLVED FIXED307174
[threaded-animations] WPT test `css/css-pseudo/marker-animate-002.html` fails with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=307174
Summary [threaded-animations] WPT test `css/css-pseudo/marker-animate-002.html` fails...
Antoine Quint
Reported 2026-02-06 09:57:35 PST
The WPT test `css/css-pseudo/marker-animate-002.html` fails with "Threaded Time-based Animations" enabled. We're attempting to run an accelerated animation on a `::marker` pseudo-element for the `opacity` property but that property is not supported by that element.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-06 09:57:42 PST
Antoine Quint
Comment 2 2026-02-06 10:00:21 PST
EWS
Comment 3 2026-02-06 12:10:56 PST
Committed 306964@main (796695f49d7f): <https://commits.webkit.org/306964@main> Reviewed commits have been landed. Closing PR #58055 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.