[threaded-animations] WPT test `css/css-pseudo/marker-animate-002.html` fails with "Threaded Time-based Animations" enabled https://bugs.webkit.org/show_bug.cgi?id=307174 rdar://169810128

Reviewed by Tim Nguyen.

Ensure we don't consider invalid properties for `::marker` pseudo-elements for acceleration.
This was caught by EWS when trying to enable "Threaded Time-based Animations" [0].

Note that there is no test change in this patch since the flag is not yet enabled on bots. This
was caught in preparation of that running animation tests locally using
`--experimental-feature ThreadedTimeBasedAnimationsEnabled=true`.

[0] https://github.com/WebKit/WebKit/pull/57620

* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::computeAcceleratedPropertiesState):

Canonical link: https://commits.webkit.org/306964@main